--- a/package.json
+++ b/package.json
@@ -14,18 +14,11 @@
   ],
   "main": "index.js",
   "engines": {
-    "node": ">=4"
+    "node": ">=4.7"
   },
   "scripts": {
     "test": "mocha"
   },
-  "keywords": [
-    "url",
-    "path",
-    "rewrite",
-    "rewrites",
-    "static"
-  ],
   "dependencies": {
     "define-property": "^0.2.5",
     "isobject": "^3.0.0",
@@ -37,6 +30,13 @@
     "mocha": "^3.2.0",
     "vinyl": "^2.0.1"
   },
+  "keywords": [
+    "path",
+    "rewrite",
+    "rewrites",
+    "static",
+    "url"
+  ],
   "verb": {
     "toc": false,
     "layout": "default",
